Detect __declspec within JSBase.h https://bugs.webkit.org/show_bug.cgi?id=179892

Reviewed by Darin Adler.

* API/JSBase.h:


Canonical link: https://commits.webkit.org/195932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225063 268f45cc-cd09-0410-ab3c-d52691b4dbfc